# projeto_plp

./: .gitignore  README.md  projetoPLP.cabal
.github/workflows/: ci.yml
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.6.7/: package.cache  projeto-plp-0.1.0.0-inplace.conf
src/: Board.hs  GameLoop.hs  Generator.hs  Main.hs  UI.hs  Util.hs  Validation.hs
tests/: BoardTests.hs  GeneratorTests.hs  MainTest.hs  ValidationTests.hs
