cabal-version:       3.0
name:                projeto-plp
version:             0.1.0.0

library
  hs-source-dirs: src
  exposed-modules:
      Board
      Generator
      UI
      Validation
      GameLoop
  build-depends:
      base >=4.14 && <5,
      random,
      haskeline,
      HUnit
  default-language: Haskell2010

executable projeto-plp
  hs-source-dirs: src
  main-is: Main.hs
  build-depends:
      base >=4.14 && <5,
    --  projeto-plp,
      haskeline
  default-language: Haskell2010


test-suite sudoku-test
  type: exitcode-stdio-1.0
  hs-source-dirs: tests 
  main-is: BoardTest.hs
  build-depends:
      base >=4.14 && <5,
      HUnit,
      projeto-plp
  default-language: Haskell2010
