cabal-version:       3.0
name:                projeto-plp
version:             0.1.0.0

library
  hs-source-dirs: src
  exposed-modules:
      Board
      Generator
      UI
      Validation
      GameLoop
      Util
      Main
  build-depends:
      base >=4.14 && <5,
      random,
      haskeline,
      HUnit
  default-language: Haskell2010

executable projeto-plp
  hs-source-dirs: src
  main-is: Main.hs
  other-modules:
      Board
      Generator
      UI
      Validation
      Util
      GameLoop
  build-depends:
      base >=4.14 && <5,
      random,
      haskeline
    --  projeto-plp
  default-language: Haskell2010


test-suite sudoku-test
  type: exitcode-stdio-1.0
  hs-source-dirs: tests 
  main-is: MainTest.hs
  other-modules:
    BoardTests
    GeneratorTests
    ValidationTests
  build-depends:
      base >=4.14 && <5,
      HUnit,
      projeto-plp
  default-language: Haskell2010
